--- a/messages/install.txt
+++ b/messages/install.txt
@@ -9,7 +9,7 @@ Activate the UI theme and color scheme by modifying your user preferences file, 
 *Note: Don't forget to restart Sublime Text after activating the theme.*
 
 
-Spacegray
+Lanzhou
 ---------
 
 *Example settings*
