--- a/messages/install.txt
+++ b/messages/install.txt
@@ -16,7 +16,7 @@ Manzhou
 
     {
       "theme": "Manzhou.sublime-theme"
-      "color_scheme": "Packages/Theme - Manzhou/base16-ocean.dark.tmTheme"
+      "color_scheme": "Packages/Theme - Manzhou/OneDark.tmTheme",
     }
 
 
